--- a/app/src/main/res/layout/fragment_song_description.xml
+++ b/app/src/main/res/layout/fragment_song_description.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/songDescription"
+        android:id="@+id/artistName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="%1$d"
